--- a/analysis/multistream_alignment.qmd
+++ b/analysis/multistream_alignment.qmd
@@ -8,9 +8,7 @@ library(tidyverse)
 library(here)
 library(glue)
 
-theme_set(theme_bw() +
-            theme(strip.background = element_blank(),
-                  panel.grid = element_blank()))
+source(here("analysis", "theme.R"))
 ```
 
 ```{r}
